--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ margin: 0 auto;
 .section {
 padding: 120px 0;
 max-width: 1440px;
+margin: 0 auto;
 }
 
 .section__title {
@@ -103,6 +104,7 @@ background: var(--white);
 flex-direction: row;
 justify-content: space-between;
 padding: 0 15px;
+align-items: center; 
 }
 
 .main-nav {
@@ -171,7 +173,6 @@ color: var(--ocean);
 
 .menu-nav__item {
 position: relative;
-padding: 24px 0;
 }
 
 .menu-nav__item.active {
@@ -203,6 +204,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
+margin:0 auto;
 }
 
 .hero .container {
@@ -210,6 +212,7 @@ gap: 48px;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+padding:0 15px;
 }
 
 .hero__title {
@@ -458,11 +461,14 @@ padding: 100px 0;
 justify-content: start;
 /* gap: 120px; */
 align-items: baseline;
-margin-right: 120px;
 }
 
 .footer__column1 {
 margin-right: 120px;
+}
+
+.footer__column2 {
+margin-right: 80px;
 }
 
 .logo.footer-logo {
@@ -496,4 +502,297 @@ color: var(--cloud);
 .footer .social__link:hover,
 .footer .social__link:focus {
 background-color: var(--green);
+}
+
+.footer__list--mail,
+.mail--submit {
+flex-direction: row;
+display: flex;
+flex-wrap: nowrap;
+width: 100%;
+align-items: center;
+justify-content: space-between;
+gap: 24px;
+  }
+
+
+.email-for-news {
+border: 1px solid var(--white);
+border-radius: 4px;
+width: 264px;
+padding: 8px 16px;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: var(--white);
+background: var(--navy-blue);
+}
+
+.email-for-news::placeholder {
+font-family: var(--font-family);
+font-weight: 400;
+font-size: 12px;
+line-height: 1.2;
+letter-spacing: 0.04em;
+color: var(--white);
+}
+
+.standartButtom.btn-news {
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;
+justify-content: center;
+align-items: center;
+margin: 0;
+gap: 16px;
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--white);
+background: var(--iris);
+border-radius: 4px;
+padding: 8px 24px;
+width: 165px;
+height: 40px;
+cursor: pointer;
+}
+
+/* MODAL WINDOW */
+
+.backdrop {
+position: fixed;
+display: flex;
+justify-content: center;
+align-items: center;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.2);
+z-index: 9999;
+visibility: hidden;
+opacity: 0;
+pointer-events: auto;
+transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop__modal {
+display: inline-block;
+overflow: hidden;
+vertical-align: middle;
+position: relative;
+text-align: left;
+background: var(--white);
+max-width: 408px;
+padding: 24px;
+}
+
+
+.backdrop.is-open {
+visibility: visible;
+opacity: 1;
+pointer-events: auto;
+}
+
+.backdrop__btn--container {
+display: flex;
+position: absolute;
+width: 30px;
+height: 30px;
+top: 0;
+right: 0;
+margin-top: 8px;
+margin-right: 8px;
+justify-content: center;
+align-items: center;
+}
+
+.backdrop__btn--close {
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+width: 24px;
+height: 24px;
+cursor: pointer;
+border: rgba(0, 0, 0, 0.1) 1px solid;
+
+}
+
+.backdrop__btn--close .icon-vector {
+fill: var(--navy-blue);
+width: 8px;
+height: 8px;
+}
+
+
+.anketa__title {
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: var(--navy-blue);
+margin: 24px 0 16px;
+}
+
+.form__anketa {
+width: 100%;
+margin: 0 auto;
+}
+
+.question__label {
+margin-bottom: 4px;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+font-family: var(--font-family);
+font-weight: 400;
+color: var(--light-slate);
+}
+
+.form__question {
+position: relative;
+display: flex;
+flex-direction: column;
+}
+
+.comments-form {
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: var(--navy-blue-modal);
+padding: 8px 16px;
+border: 1px solid var(--navy-blue-modal);
+border-radius: 4px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__question > .comments-form:hover, .form__question > .comments-form:focus, .form__question > .comments-form:active {
+color: var(--iris);
+border: 1px solid var(--iris);
+outline: none;
+}
+
+.form-icon {
+position: absolute;
+top: 50%;
+transform: translateY(-50%);
+left: 15px;
+fill: var(--navy-blue);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__question + .form__question {
+margin-top: 10px;
+}
+
+.form__question > input {
+padding-left: 42px;
+}
+
+.form__agreement {
+position: relative;
+margin-top: 16px;
+margin-bottom: 24px;
+}
+
+.form__agreement .question__label {
+display: flex;
+align-items: center;
+line-height: 1.7;
+text-align: center;
+font-family: var(--font-family);
+font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: var(--light-slate);
+}
+
+.style-checkbox {
+  height: 16px;
+  width: 16px;
+  margin-right: 8px;
+}
+
+.form__agreement .question__label {
+font-size: 12px;
+letter-spacing: 0.04em;
+color: var(--light-slate);
+}
+
+.link--underline {
+line-height: 1.33;
+text-decoration: underline;
+text-decoration-skip-ink: none;
+color: var(--iris);
+}
+
+.standartButtom.btn-form {
+border-radius: 4px;
+padding: 16px 32px;
+width: 169px;
+height: 56px;
+margin: 0 auto;
+padding: 0;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background: var(--iris);
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: var(--white);
+cursor: pointer;
+}
+
+.input-form {
+border: 1px solid var(--navy-blue-modal);
+border-radius: 4px;
+width: 100%;
+height: 40px;
+padding-left: 38px;
+}
+.input-form:hover, .input-form:focus, .input-form:active {
+color: var(--iris);
+border: 1px solid var(--iris);
+outline: none;
+}
+.input-form:hover ~ .form-icon, .input-form:focus ~ .form-icon, .input-form:active ~ .form-icon {
+fill:var(--iris);
+}
+
+.checkbox-icon-container {
+position: absolute;
+top: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 15px;
+height: 16px;
+background: var(--iris);
+border-radius: 2px;
+transform: scale(0);
+}
+
+.question__container--input {
+position: relative;
+display: flex;
+flex-direction: row-reverse;
+}
+
+input[type=checkbox]:checked + .checkbox-icon-container {
+transform: scale(1);
+}
+
+input[type=checkbox]:checked {
+transform: scale(0);
 }
