--- a/css/styles.css
+++ b/css/styles.css
@@ -463,11 +463,11 @@ justify-content: start;
 align-items: baseline;
 }
 
-.footer__column1 {
+.footer_column1 {
 margin-right: 120px;
 }
 
-.footer__column2 {
+.footer_column2 {
 margin-right: 80px;
 }
 
@@ -520,9 +520,11 @@ gap: 24px;
 border: 1px solid var(--white);
 border-radius: 4px;
 width: 264px;
+height: 40px; 
 padding: 8px 16px;
 font-size: 12px;
 line-height: 2;
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
 letter-spacing: 0.04em;
 color: var(--white);
 background: var(--navy-blue);
@@ -543,20 +545,27 @@ flex-direction: row;
 flex-wrap: nowrap;
 justify-content: center;
 align-items: center;
+min-width: 165px;
+height: 40px; 
 margin: 0;
 gap: 16px;
 font-family: var(--font-family);
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
-letter-spacing: 0.02em;
+letter-spacing: 0.04em;
 color: var(--white);
 background: var(--iris);
 border-radius: 4px;
+ border: none; 
 padding: 8px 24px;
 width: 165px;
 height: 40px;
 cursor: pointer;
+}
+
+.iconsend {
+margin-left: 16px;
 }
 
 /* MODAL WINDOW */
@@ -570,24 +579,30 @@ left: 0;
 top: 0;
 width: 100%;
 height: 100%;
-background-color: rgba(0, 0, 0, 0.2);
+background-color: rgba(46, 47, 66, 0.4);
 z-index: 9999;
 visibility: hidden;
 opacity: 0;
 pointer-events: auto;
-transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .backdrop__modal {
+position: absolute;
 display: inline-block;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%); 
 overflow: hidden;
 vertical-align: middle;
-position: relative;
 text-align: left;
-background: var(--white);
-max-width: 408px;
-padding: 24px;
+background: var(--dairy);
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
+width: 408px;
+min-height: 584px;
+border-radius: 4px; 
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+padding: 72px 24px 24px 24px;
 }
 
 
@@ -597,35 +612,37 @@ opacity: 1;
 pointer-events: auto;
 }
 
-.backdrop__btn--container {
+.backdrop__btn-close {
 display: flex;
 position: absolute;
-width: 30px;
-height: 30px;
-top: 0;
-right: 0;
-margin-top: 8px;
-margin-right: 8px;
-justify-content: center;
-align-items: center;
-}
-
-.backdrop__btn--close {
-display: flex;
+top: 24px;
+right: 24px;
 justify-content: center;
 align-items: center;
 border-radius: 50%;
 width: 24px;
 height: 24px;
 cursor: pointer;
+background-color: var(--cornflower);
 border: rgba(0, 0, 0, 0.1) 1px solid;
-
+ padding: 0; 
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-.backdrop__btn--close .icon-vector {
+.backdrop__btn-close:hover,
+.backdrop__btn-close:focus {
+  background-color: var(--ocean);
+  border: none;
+}
+
+.backdrop__btn-close .icon-vector {
 fill: var(--navy-blue);
-width: 8px;
-height: 8px;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop__btn-close:hover .icon-vector,
+.backdrop__btn-close:focus .icon-vector {
+fill: var(--white);
 }
 
 
@@ -669,9 +686,7 @@ color: var(--navy-blue-modal);
 padding: 8px 16px;
 border: 1px solid var(--navy-blue-modal);
 border-radius: 4px;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form__question > .comments-form:hover, .form__question > .comments-form:focus, .form__question > .comments-form:active {
@@ -684,7 +699,7 @@ outline: none;
 position: absolute;
 top: 50%;
 transform: translateY(-50%);
-left: 15px;
+left: 16px;
 fill: var(--navy-blue);
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -755,12 +770,16 @@ cursor: pointer;
 }
 
 .input-form {
-border: 1px solid var(--navy-blue-modal);
+border: 1px solid rgba(46, 47, 66, 0.4); 
 border-radius: 4px;
 width: 100%;
 height: 40px;
 padding-left: 38px;
+outline: transparent;
+background-color: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .input-form:hover, .input-form:focus, .input-form:active {
 color: var(--iris);
 border: 1px solid var(--iris);
@@ -783,7 +802,7 @@ border-radius: 2px;
 transform: scale(0);
 }
 
-.question__container--input {
+.question__container-input {
 position: relative;
 display: flex;
 flex-direction: row-reverse;
