--- a/css/styles.css
+++ b/css/styles.css
@@ -517,17 +517,17 @@ gap: 24px;
 
 
 .email-for-news {
-border: 1px solid var(--white);
-border-radius: 4px;
 width: 264px;
-height: 40px; 
-padding: 8px 16px;
-font-size: 12px;
-line-height: 2;
- box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); 
-letter-spacing: 0.04em;
-color: var(--white);
-background: var(--navy-blue);
+  height: 40px;
+  border: 1px solid var(--white);
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--white);
 }
 
 .email-for-news::placeholder {
@@ -540,31 +540,24 @@ color: var(--white);
 }
 
 .standartButtom.btn-news {
+min-width: 165px;
+height: 40px;
 display: flex;
-flex-direction: row;
-flex-wrap: nowrap;
 justify-content: center;
 align-items: center;
-min-width: 165px;
-height: 40px; 
-margin: 0;
-gap: 16px;
 font-family: var(--font-family);
-font-weight: 500;
 font-size: 16px;
+font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
+cursor: pointer;
 color: var(--white);
 background: var(--iris);
+border: none;
 border-radius: 4px;
- border: none; 
-padding: 8px 24px;
-width: 165px;
-height: 40px;
-cursor: pointer;
 }
 
-.iconsend {
+.icon-iconsend {
 margin-left: 16px;
 }
 
