--- a/css/styles.css
+++ b/css/styles.css
@@ -504,8 +504,7 @@ color: var(--cloud);
 background-color: var(--green);
 }
 
-.footer__list--mail,
-.mail--submit {
+.mail-submit {
 flex-direction: row;
 display: flex;
 flex-wrap: nowrap;
